Tue Jun 11 21:20:45 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpuctrl.c (oBankedReg): Add.
	(GetBankedReg, Parse_PSR_t, Parse_PSR): Add.
	(getpsr): Remove.
	(m_msr): Make use of Parse_PSR instead of getpsr. Add Thumb2 support.
	(m_mrs): Likewise.
	* option.h (ARM_MODE_*): Change into ARM_Mode_e* enum. Add monitor and
	hyp entries.
	* option.c (Option_IsValidARMMode): Follow ARM_MODE_* change.

	* unittests/compare/core/instr_mrs_msr.s: Enhance.

Sun Jun  9 14:47:48 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (m_sev): Add Thumb and Thumb2 support.
	(m_wfe): Likewise.
	(m_wfi): Likewise.
	(m_yield): Likewise.

	* unittests/compare/Makefile.in: Swap ELF/AOF order.
	* unittests/compare/core/instr_sev_wfe_wfi_yield.s: Enhance.

Sun Jun  9 13:45:49 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* it.c (m_it): Tune warning.
	* m_cpuctrl.c (m_cps): Add Thumb and Thumb2 support.

	* unittests/compare/core/instr_cps.s: Enhance.

Sat Jun  8 23:24:16 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpuctrl (m_dbg): Add Thumb2 support.
	(core_smc_smi): Value should be present.  Add instr parameter.
	(m_smc): Follow core_smc_smi API change.
	(m_smi): Likewise.

	* unittests/compare/core/instr_dbg.s: Enhance.

Sat Jun  8 22:30:20 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* decode.c (oDecodeTable): Use m_smi for SMI.
	* m_cpuctrl.c (m_smc): Factor out to...
	(core_smc_smi): ...this.  Add Thumb2 support.  Parse # optionally.
	(m_smi): Add.
	* m_cpuctrl.h (m_smi): Add.

	* unittests/compare/core/instr_smc_smi.s: Enhance.

Sat Jun  8 19:14:11 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cputctrl.c (ADR_RelocUpdaterCore): Use minus sign for register base
	with negative offset.  Use NOP instruction for second instruction of
	ADRL when possible.
	* option.c (GetOptCCodeAndOptChar): Add.
	(GetCCodeIfThere): Reimplement using switch.
	(Option_CondS): Make use of GetOptCCodeAndOptChar.