@@ -132,7 +132,7 @@ static const decode_table_t oDecodeTable[] =
   { "BFI", eCB_VoidPMatch, 1, 1, { .vdpm = m_bfi } }, /* BFC */
   { "BIC", eCB_VoidPMatch, 1, 1, { .vdpm = m_bic } }, /* BIC CC S */
   { "BIN", eCB_NoLex, 0, 0, { .nolex = c_incbin } }, /* BIN / INCBIN */
-  { "BKPT", eCB_Void, 1, 1, { .vd = m_bkpt } }, /* BKPT */
+  { "BKPT", eCB_VoidPMatch, 1, 1, { .vdpm = m_bkpt } }, /* BKPT */
   { "BLX", eCB_VoidPMatch, 1, 1, { .vdpm = m_blx } }, /* BLX CC */
   { "BX", eCB_VoidPMatch, 1, 1, { .vdpm = m_bx } }, /* BX CC */
   { "BXJ", eCB_VoidPMatch, 1, 1, { .vdpm = m_bxj } }, /* BXJ CC */
